test/Programs/ValidTests/polySUTL/polySUTL.fst
id' : forall a : TL => a -> a
id' x = x

f : Int -o Int
f x = 2 * x

start : Int
start =
  (id'[Int -o Int] f) 5
